# n-queens-performance-comparison

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: plot_results.py  run_benchmarks.sh
src/: queens_bitmask.cpp  queens_cuda.cu  queens_naive.cpp
tests/: unittest_nqueens.py
